tests/examples/fail/safety1_proof_invariants.fly
# Copyright 2022-2023 VMware, Inc.
# SPDX-License-Identifier: BSD-2-Clause

# TEST --name houdini -- infer --houdini

mutable p: bool
mutable q: bool

assume !p & !q
assume always p'=(p|q) & q'=q
assert always !p
proof {
    invariant !p
    invariant !q
    invariant p
    invariant q
}
